[package]
name = "mqtt_vault"
version = "1.0.0"
authors = ["Bruce Patterson"]
edition = "2021"
description = "JSON database controlled via MQTT"
documentation = "https://bpatterson.dev/man/mqtt_vault.html"
homepage = "https://bpatterson.dev/projects/mqtt_vault"
repository = "https://github.com/bpatterson-gh/MqttVault"
license = "MPL-2.0"
keywords = ["mqtt", "database", "iot"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0.10.1"
crossbeam-channel = "0.5.6"
ctrlc = { version = "3.2.3", features = ["termination"] }
json = "0.12.4"
paho-mqtt = "0.11.1"
rpassword = "7.1.0"
sha3 = "0.10.6"
time = { version = "0.3.17", features = ["formatting", "local-offset"] }
uuid = { version = "1.2.2", features = ["v4"] }
