[package]
name = "mqtt_vault"
version = "1.0.2"
authors = ["Bruce Patterson"]
edition = "2021"
description = "JSON database controlled via MQTT"
documentation = "https://bpatterson.dev/man/mqtt_vault.html"
homepage = "https://bpatterson.dev/projects/mqtt_vault"
repository = "https://github.com/bpatterson-gh/MqttVault"
license = "MPL-2.0"
keywords = ["mqtt", "database", "iot"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0.10.1"
crossbeam-channel = "0.5.12"
ctrlc = { version = "3.4.2", features = ["termination"] }
json = "0.12.4"
paho-mqtt = "0.12.3"
rpassword = "7.3.1"
sha3 = "0.10.8"
time = { version = "0.3.34", features = ["formatting", "local-offset"] }
uuid = { version = "1.7.0", features = ["v4"] }
